--- a/page2.html
+++ b/page2.html
@@ -11,3 +11,6 @@
     <button onclick="location.href='index.html'">Πίσω στην Κεντρική</button>
 </body>
 </html>
+
+<img src="images/photo1.jpg.jpg">
+<img src="images/photo2.jpg.jpg">
